--- a/overleaf-template/ThesisTemplateIGNC/main.tex
+++ b/overleaf-template/ThesisTemplateIGNC/main.tex
@@ -127,7 +127,7 @@
 \newcommand{\myuniversitygerman}{Technische Universität Graz} %% your university/school
 \newcommand{\myinstitute}{Industry Grade Networks and Clouds} %% affiliation
 \newcommand{\myinstitutehead}{Head of Institute} %% head of institute
-\newcommand{\mysupervisor}{M.Sc. Linh Kästner} %% your supervisor
+\newcommand{\mysupervisor}{Dr.-Ing. Linh Kästner} %% your supervisor
 \newcommand{\myfirstexaminer}{Prof. Dr.-Ing. Jens Lambrecht}
 \newcommand{\mysecondexaminer}{Prof. Dr.-Ing. Sebastian Möller}
 \newcommand{\mycosupervisors}{Co-supervisor 1, Co-supervisor 2}
